--- a/views/product.pug
+++ b/views/product.pug
@@ -23,6 +23,6 @@ block content
       a.hidden
         button.purchase.btn-blue(onclick="sendCart(this)", targetid='id=' + variables.srw._id + '&code=' + variables.srw.code + '&price=' + variables.srw.price + '&image=' + variables.srw.image)
           img.cart(src='/img/web/shopping-cart.png')
-          | Purchases
+          | Add to Cart
   script.
     detail(#{variables.main.stage});
