--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,24 +1,17 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 16px;
-	
 	width: 100%;
 	background-image: linear-gradient(-170deg,rgb(50, 50, 200) 5%, white 70%, white);
-	/*
-	background-color: white;
-	background-repeat: no-repeat;
-	background-size: cover;
-	*/
 	background-attachment: fixed;
 	white-space: nowrap;
-	/*如不用nowrap, div.login 右邊會留有空位?*/
 }
 
+/* layout view*/
 #welcome{
 	display: inline-block;
 	width:0px;
 	text-align: right;
-	
 }
 .top{
 	font-size:14px;
@@ -35,7 +28,6 @@ body {
 .top-left{
 	width:20%;
 }
-
 .top-right{
 	width: 80%;
     text-align: right;
@@ -62,7 +54,6 @@ header{
 	padding-bottom:10px;
 	letter-spacing:1px; 
 }
-
 .logo > a {
 	text-decoration: none; 
 	color:greenyellow; 
@@ -74,13 +65,6 @@ header{
 	width: 50px;
 	margin-left: 5px;
 }
-.shop{
-	margin:10px;
-	max-height: 250px;
-	float: left;
-}
-
-
 nav {
 	color:#FFF; 
 	right:0px; 
@@ -97,9 +81,6 @@ nav ul li{
 	border-left: 1px solid white;
 	vertical-align: middle;
 }
-
-
-
 nav ul li:first-child{
   border-left: none;
 }
@@ -113,11 +94,9 @@ nav li a {
 nav li a:hover {
   color: greenyellow;
 }
-
 nav li a p{
 	display: inline-block;
 }
-
 .container{
 	top:5px;
 	width: 90%;
@@ -134,20 +113,30 @@ nav li a p{
 	position: relative;
 
 }
-
 .container ul{
 	margin: 20px;
 	padding: 20px;
 	height: 100%;
 	display:table;
 }
-
 .container ul li{
 	display: table-cell;
 	display:inline-block;
 	height: 93%;
 	border: none;
 }
+footer{
+	font-size: 12px;
+	color:white; 
+	font-weight: bold;
+	text-shadow: 2px 2px 5px black; 
+    position: absolute;
+	bottom: 0px;
+    left: 50%; 
+	transform: translate(-50%, -20%);
+}
+
+/* index view */
 .main{
 	width: 75%;
 	height: 75vh;
@@ -155,133 +144,26 @@ nav li a p{
 	background-repeat:no-repeat;
 	background-size:cover ;
 	background-position:center center;
-	/*background-attachment: fixed;*/
 	display: inline-block;
 	margin-bottom: 20px;
-	vertical-align: top;      /*要加上這個top, display:inline-block才可平排,不會走位*/
+	vertical-align: top;  
 }
-
-
 .side{
-	width: 23%; /*用table只可以set小於50%的width? 而且會無視margin,如要分隔只可設定padding?*/
+	width: 23%; 
 	display: inline-block;
 	margin-bottom: 20px;
 	padding-left: 2px;
-	vertical-align: top;      /*要加上這個top, display:inline-block才可平排,不會走位*/
+	vertical-align: top;   
 }
-
-
-.inside{
-	margin: 20px;
-	margin-top: 0px;
-	padding: 0px 20px;
-	position: relative;
-	text-shadow: 0px 1px rgba(0, 0, 0, 0.4);
-	line-height: 120%;
-	text-align: justify;
-	min-height: 50vh;
-	
-}
-
-.title{
-	color: white;
-	font-size: 30px;
-	font-weight: bold;
-	line-height: 180%;
-	text-shadow: 2px 2px 5px blue; 
-	font-style: italic;
-	display: inline-block;
-	
-}
-.hidden {
-	display: none;
-}
-.button {
-	 
-	color: white;
-	margin-right: 5px;
-	border: none;
-	text-align: center;
-  	text-decoration: none;
-  	display: inline-block;
-	width:100px
-}
-.btn-green {
-	background-color: rgb(25, 189, 25);
-}
-.btn-green:hover {
-	color:greenyellow;
-	cursor: pointer;
-	background-color: rgb(25, 218, 25);
-}
-.btn-blue {
-	background-color: rgb(26, 120, 207);
-}
-.btn-blue:hover {
-	color:greenyellow;
-	cursor: pointer;
-	background-color: rgb(26, 180, 207);
-}
-.btn-red {
-	background-color: rgb(192, 45, 45); 
-}
-.btn-red:hover {
-	color:greenyellow;
-	cursor: pointer;
-	background-color: rgb(230, 59, 59); 
-}
-
-.request_service{
-    height: 100px;
-    position: absolute;
-	bottom: 0px;
-    left: 38%; 
-	transform: translate(-50%, -80%);
-    z-index: 2;
-}
-
-
-.request_service P{
-	font-weight: 1000; 
-	font-size:18px;
-	text-align:center;
-	line-height:120%; 
-	color:white;	
-	text-shadow: 2px 2px 5px black; 
-	
-}
-
-.request_service button{
-	text-decoration: none;
-	white-space:nowrap; 
-	border-radius: 12px;
-	padding: 5px 12px;
-	font-size: 12px;
-	color:white; 
-	
-	font-weight: bold; 
-	border: 0px solid #e7e7e7;
-	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-	position: absolute;
-	bottom: 5px;
-    left: 50%; 
-	transform: translate(-50%, -50%);
-}
-
-
-
-
 .map{
 	width: 100%;
 	height: 35vh;
 	margin-bottom: 20px;
 }
-
 .table{
 	display:table;
 	width: 100%;
 }
-
 .table img{
 	width:25px;
 	height:25px;
@@ -302,91 +184,55 @@ nav li a p{
 	word-break:break-all;
 	
 }
-footer{
-	font-size: 12px;
-	color:white; 
-	font-weight: bold;
-	text-shadow: 2px 2px 5px black; 
+.request_service{
+    height: 100px;
     position: absolute;
 	bottom: 0px;
+    left: 38%; 
+	transform: translate(-50%, -80%);
+    z-index: 2;
+}
+.request_service P{
+	font-weight: 1000; 
+	font-size:18px;
+	text-align:center;
+	line-height:120%; 
+	color:white;	
+	text-shadow: 2px 2px 5px black; 
+	
+}
+.request_service button{
+	text-decoration: none;
+	white-space:nowrap; 
+	border-radius: 12px;
+	padding: 5px 12px;
+	font-size: 12px;
+	color:white; 
+	
+	font-weight: bold; 
+	border: 0px solid #e7e7e7;
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+	position: absolute;
+	bottom: 5px;
     left: 50%; 
-	transform: translate(-50%, -20%);
+	transform: translate(-50%, -50%);
 }
 
+/* product and card view */
 .product{
-	
 	margin: 0px auto;
 	margin-bottom: 20px;
 	padding: 0px; 
 	padding-left: 20px;
 	position: relative;
 	min-height: 50vh;
-	
 }
-
-
-	
-
-
-
 .product a{
 	text-decoration: none;
 }
-
-.card{
-	width: 270px;
-	display: inline-block;
-	vertical-align: top;
-	margin-right: 18px;
-	margin-bottom: 18px;
-	position: relative;
-	min-height: 350px;
-	padding: 5px;
-	background-color:rgba(0,0,225,0.2);
-	font-size: 16px;
-	text-align: right;
-	color: white;
-	box-shadow: 0 0 0 1px rgba(225,225,225,0.3) inset, 0 8px 16px rgba(0, 0, 0, 0.6);
-}
-
-.card img{
-	width: 100%;
-	max-height: 250px;
-}
-
-.code{
-	padding: 10px 5px;
-	font-size: 25px;
-	text-align: left;
-	color: white;
-	text-shadow: 2px 2px 5px blue; 
-}
-
-.bottom{
-	position: absolute;  /*父元素要為Position:relaive*/
-	bottom: 3px;
-	right: 0px;
-	text-shadow: 2px 2px 5px blue;
-}
-
-.clearfix:after{
-	content: "";
-	display: block;
-	clear: block;
-}
-.detail{
-	width: 90%;
-	margin: 0px auto;
-	background-color: violet;
-	
-}
-
-
 .product_img img{
 	width:100%;
-	
 }
-
 .product_img{
 	display: inline-block;
 	width:40vw;
@@ -395,12 +241,10 @@ footer{
 	background-color:rgba(0,0,225,0.2);
 	vertical-align:top;
 }
-
 .product_details{
 	display: inline-block;
 	vertical-align: top;      /*要加上這個top, display:inline-block才可平排,不會走位*/
 }
-
 H2{
 	width: 20em;  /*em是字體單位*/
 	background-color: rgba(158, 158, 158,0.3);
@@ -409,9 +253,7 @@ H2{
 	padding: 5px;
 	margin: 5px;
 	font-weight: bold;
-	
 }
-
 .specification{
 	
 	padding: 0px 10px;
@@ -427,13 +269,59 @@ H2{
 	text-align: left;  
 	border-bottom: 1px solid rgba(158, 158, 158, 0.3);   
 }
-
-
-
-
 .specification dd{
 	border-bottom: 1px solid rgba(158, 158, 158, 0.3);   
 }
+.card{
+	width: 270px;
+	display: inline-block;
+	vertical-align: top;
+	margin-right: 18px;
+	margin-bottom: 18px;
+	position: relative;
+	min-height: 350px;
+	padding: 5px;
+	background-color:rgba(0,0,225,0.2);
+	font-size: 16px;
+	text-align: right;
+	color: white;
+	box-shadow: 0 0 0 1px rgba(225,225,225,0.3) inset, 0 8px 16px rgba(0, 0, 0, 0.6);
+}
+.card img{
+	width: 100%;
+	max-height: 250px;
+}
+.code{
+	padding: 10px 5px;
+	font-size: 25px;
+	text-align: left;
+	color: white;
+	text-shadow: 2px 2px 5px blue; 
+}
+.bottom{
+	position: absolute;  /*父元素要為Position:relaive*/
+	bottom: 3px;
+	right: 0px;
+	text-shadow: 2px 2px 5px blue;
+}
+.clearfix:after{
+	content: "";
+	display: block;
+	clear: block;
+}
+
+
+
+
+.detail{
+	width: 90%;
+	margin: 0px auto;
+	background-color: violet;
+	
+}
+
+
+
 
 .purchase{
 	width:200px;
@@ -716,4 +604,73 @@ label[for="adminTrue"], label[for="adminFalse"]{
 	border-top: 1px solid black;
 	border-bottom: 3px double black;
 
+}
+
+
+/* about view */
+.shop{
+	margin:10px;
+	max-height: 250px;
+	float: left;
+}
+.inside{
+	margin: 20px;
+	margin-top: 0px;
+	padding: 0px 20px;
+	position: relative;
+	text-shadow: 0px 1px rgba(0, 0, 0, 0.4);
+	line-height: 120%;
+	text-align: justify;
+	min-height: 50vh;
+	
+}
+
+/*common css*/
+.title{
+	color: white;
+	font-size: 30px;
+	font-weight: bold;
+	line-height: 180%;
+	text-shadow: 2px 2px 5px blue; 
+	font-style: italic;
+	display: inline-block;
+	
+}
+.hidden {
+	display: none;
+}
+
+
+.button {
+	color: white;
+	margin-right: 5px;
+	border: none;
+	text-align: center;
+  	text-decoration: none;
+  	display: inline-block;
+	width:100px
+}
+.btn-green {
+	background-color: rgb(25, 189, 25);
+}
+.btn-green:hover {
+	color:greenyellow;
+	cursor: pointer;
+	background-color: rgb(25, 218, 25);
+}
+.btn-blue {
+	background-color: rgb(26, 120, 207);
+}
+.btn-blue:hover {
+	color:greenyellow;
+	cursor: pointer;
+	background-color: rgb(26, 180, 207);
+}
+.btn-red {
+	background-color: rgb(192, 45, 45); 
+}
+.btn-red:hover {
+	color:greenyellow;
+	cursor: pointer;
+	background-color: rgb(230, 59, 59); 
 }
