--- a/views/product.pug
+++ b/views/product.pug
@@ -8,7 +8,7 @@ block content
       img(src='/img/product/' + variables.srw.image, alt= variables.srw._id)
     .product_details
       div
-        h2 Product specifications
+        p Product specifications
         dl(class="specification clearfix")
           dt Release month:
           dd= variables.srw.release
