--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html
   head
     meta(name='viewport', content='width=device-width, initial-scale=1', charset='utf-8')
-    title project
+    title progect test
     link(href='/css/reset.css', rel='stylesheet')
     link(href='/css/style.css', rel='stylesheet')
     block styles
@@ -12,7 +12,7 @@ html
     .top
       .top-left
         p
-          |  
+          | Date/Time: 
           span#datetime
       .top-right
         a(href='/login')
