--- a/views/login.pug
+++ b/views/login.pug
@@ -2,7 +2,7 @@ extends ./layout.pug
 
 block content
   .form
-    form(action='/userLogin', method='post', name='Login')
+    form(action='/login', method='post', name='Login')
       p.title Login
       fieldset
         label(for='username') Username:
