--- a/views/cart.pug
+++ b/views/cart.pug
@@ -54,5 +54,5 @@ block content
         td TOTAL
         td(class="total_amount")= variables.main.ttl
         td
-          button.button.btn-green(onclick="location.href='/logout';") CHECK OUT
+          button.button.btn-green(onclick="location.href='/cartRecord';") CHECK OUT
         
